PORT-2891: update rush_order column search data type to boolean

--- a/src/pages/servicing-orders/columnMappings.json
+++ b/src/pages/servicing-orders/columnMappings.json
@@ -68,8 +68,7 @@
         "javaVariableName": "rush_order",
         "isEmphasized": true,
         "enableSearch": true,
-        "searchDataType": "multiselect",
-        "options": ["Y", "N"]
+        "searchDataType": "boolean"
     },
     {
         "colId": "status",
