--- a/profile/config.json
+++ b/profile/config.json
@@ -7,7 +7,7 @@
     "assetManagementURL": "https://asset-management-api.dev.vubiquity.com",
     "eventApiUrl": "https://eventapi.dev.vubiquity.com",
     "servicingOrdersUrl": "https://servicing-order-manager.dev.vubiquity.com",
-    "DOPUrl": "https://dop.qa.vubiquity.com:8045",
+    "DOPUrl": "http://dops.dev.vubiquity.com:8040",
     "service": {
       "avails": "/avails-api/v1",
       "availsParser": "/avails-parser/v1",
