--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@atlaskit/page": "^11.0.5",
         "@atlaskit/page-header": "^9.0.14",
         "@atlaskit/pagination": "^12.0.9",
+        "@atlaskit/popup": "^1.0.0",
         "@atlaskit/portal": "^3.0.9",
         "@atlaskit/quick-search": "^7.6.6",
         "@atlaskit/radio": "^3.1.4",
