PORT-3001: change Hotel avails to Hotel

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -365,7 +365,7 @@
             "displayName": "Platform Category",
             "dataType": "multiselect",
             "searchDataType": "multiselect",
-            "options": ["Residential", "Hotel Avails"],
+            "options": ["Residential", "Hotel"],
             "queryParamName": "platformCategory",
             "readOnly": false,
             "enableSearch": true,
