PORT-2961 removedFromCatalogue and removedFromCatalogueDate fields handling in RightDetails

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -1864,7 +1864,7 @@
             "dataType": "timestamp",
             "searchDataType": "timestamp",
             "queryParamName": "updatedCatalogReceivedAt",
-            "readOnly": false,
+            "readOnly": true,
             "readOnlyInDetails": false,
             "enableSearch": true,
             "enableEdit": true,
