PORT-2547: Refactor bulk matching component and add new bonus right api

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -1,142 +1,155 @@
 [
-  {
-    "colId": "system",
-    "javaVariableName": "system",
-    "field": "system",
-    "displayName": "System",
-    "dataType": "string",
-    "searchDataType": "string",
-    "queryParamName": "displayName",
-    "readOnly": false,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  },
-  {
-    "colId": "title",
-    "javaVariableName": "title",
-    "field": "title",
-    "displayName": "Title",
-    "dataType": "string",
-    "searchDataType": "string",
-    "queryParamName": "title",
-    "readOnly": false,
-    "enableSearch": true,
-    "enableEdit": true,
-    "required": true
-  },
-  {
-    "colId": "releaseYear",
-    "javaVariableName": "releaseYear",
-    "field": "releaseYear",
-    "displayName": "Release Year",
-    "dataType": "year",
-    "searchDataType": "year",
-    "queryParamName": "releaseYear",
-    "readOnly": false,
-    "enableSearch": true,
-    "enableEdit": true,
-    "required": false
-  },
-  {
-    "colId": "contentType",
-    "javaVariableName": "contentType",
-    "field": "contentType",
-    "displayName": "Content Type",
-    "dataType": "string",
-    "searchDataType": "readonly",
-    "configEndpoint": "/content-types",
-    "queryParamName": "contentType",
-    "readOnly": true,
-    "enableSearch": false,
-    "enableEdit": true,
-    "required": true
-  },
-  {
-    "colId": "episodic.seriesTitleName",
-    "javaVariableName": "episodic.seriesTitleName",
-    "field": "episodic.seriesTitleName",
-    "displayName": "Series",
-    "dataType": "string",
-    "readOnly": true,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  },
-  {
-    "colId": "episodic.seasonTitleName",
-    "javaVariableName": "episodic.seasonTitleName",
-    "field": "episodic.seasonTitleName",
-    "displayName": "Season",
-    "dataType": "string",
-    "readOnly": true,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  },
-  {
-    "colId": "castCrew.director",
-    "javaVariableName": "castCrew.director",
-    "field": "castCrew.director",
-    "displayName": "Director",
-    "dataType": "string",
-    "searchDataType": "string",
-    "queryParamName": "displayName",
-    "readOnly": false,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  },
-  {
-    "colId": "ratings",
-    "javaVariableName": "ratings",
-    "field": "ratings",
-    "displayName": "Rating",
-    "dataType": "string",
-    "searchDataType": "string",
-    "queryParamName": "ratings",
-    "readOnly": false,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  },
-  {
-    "colId": "externalIds.eidrLevel1",
-    "javaVariableName": "externalIds.eidrLevel1",
-    "field": "externalIds.eidrLevel1",
-    "displayName": "EIDR 1",
-    "dataType": "string",
-    "searchDataType": "string",
-    "queryParamName": "displayName",
-    "readOnly": false,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  },
-  {
-    "colId": "externalIds.eidrLevel2",
-    "javaVariableName": "externalIds.eidrLevel2",
-    "field": "externalIds.eidrLevel2",
-    "displayName": "EIDR 2",
-    "dataType": "string",
-    "searchDataType": "string",
-    "queryParamName": "displayName",
-    "readOnly": false,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  },
-  {
-    "colId": "castCrew.cast",
-    "javaVariableName": "castCrew.cast",
-    "field": "castCrew.cast",
-    "displayName": "Cast",
-    "dataType": "string",
-    "searchDataType": "string",
-    "queryParamName": "displayName",
-    "readOnly": false,
-    "enableSearch": false,
-    "enableEdit": false,
-    "required": false
-  }
+    {
+        "colId": "system",
+        "javaVariableName": "system",
+        "field": "system",
+        "displayName": "System",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "displayName",
+        "readOnly": false,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "id",
+        "javaVariableName": "id",
+        "field": "id",
+        "displayName": "Title ID",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "displayName",
+        "readOnly": false,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "title",
+        "javaVariableName": "title",
+        "field": "title",
+        "displayName": "Title",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "title",
+        "readOnly": false,
+        "enableSearch": true,
+        "enableEdit": true,
+        "required": true
+    },
+    {
+        "colId": "releaseYear",
+        "javaVariableName": "releaseYear",
+        "field": "releaseYear",
+        "displayName": "Release Year",
+        "dataType": "year",
+        "searchDataType": "year",
+        "queryParamName": "releaseYear",
+        "readOnly": false,
+        "enableSearch": true,
+        "enableEdit": true,
+        "required": false
+    },
+    {
+        "colId": "contentType",
+        "javaVariableName": "contentType",
+        "field": "contentType",
+        "displayName": "Content Type",
+        "dataType": "string",
+        "searchDataType": "readonly",
+        "configEndpoint": "/content-types",
+        "queryParamName": "contentType",
+        "readOnly": true,
+        "enableSearch": false,
+        "enableEdit": true,
+        "required": true
+    },
+    {
+        "colId": "episodic.seriesTitleName",
+        "javaVariableName": "episodic.seriesTitleName",
+        "field": "episodic.seriesTitleName",
+        "displayName": "Series",
+        "dataType": "string",
+        "readOnly": true,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "episodic.seasonTitleName",
+        "javaVariableName": "episodic.seasonTitleName",
+        "field": "episodic.seasonTitleName",
+        "displayName": "Season",
+        "dataType": "string",
+        "readOnly": true,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "castCrew.director",
+        "javaVariableName": "castCrew.director",
+        "field": "castCrew.director",
+        "displayName": "Director",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "displayName",
+        "readOnly": false,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "ratings",
+        "javaVariableName": "ratings",
+        "field": "ratings",
+        "displayName": "Rating",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "ratings",
+        "readOnly": false,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "externalIds.eidrLevel1",
+        "javaVariableName": "externalIds.eidrLevel1",
+        "field": "externalIds.eidrLevel1",
+        "displayName": "EIDR 1",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "displayName",
+        "readOnly": false,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "externalIds.eidrLevel2",
+        "javaVariableName": "externalIds.eidrLevel2",
+        "field": "externalIds.eidrLevel2",
+        "displayName": "EIDR 2",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "displayName",
+        "readOnly": false,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    },
+    {
+        "colId": "castCrew.cast",
+        "javaVariableName": "castCrew.cast",
+        "field": "castCrew.cast",
+        "displayName": "Cast",
+        "dataType": "string",
+        "searchDataType": "string",
+        "queryParamName": "displayName",
+        "readOnly": false,
+        "enableSearch": false,
+        "enableEdit": false,
+        "required": false
+    }
 ]
