PORT-2918: Add background color for statuses merged/deleted

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -76,7 +76,7 @@
             "displayName": "Status",
             "dataType": "select",
             "searchDataType": "multiselect",
-            "options": ["Error", "Pending", "ReadyNew", "Ready", "Merged"],
+            "options": ["Error", "Pending", "ReadyNew", "Ready", "Merged", "Deleted"],
             "queryParamName": "status",
             "readOnly": false,
             "enableSearch": true,
