PORT-3091 add bonusRight field to mappings, fix editing optional field 409 error

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -500,6 +500,15 @@
             "required": false
         },
         {
+            "javaVariableName": "bonusRight",
+            "displayName": "Bonus Right",
+            "dataType": "boolean",
+            "readOnly": true,
+            "enableSearch": true,
+            "enableEdit": false,
+            "required": false
+        },
+        {
             "javaVariableName": "affiliate",
             "displayName": "Affiliate",
             "dataType": "multiselect",
