PORT-3091 show Bonus Right in right details

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -505,7 +505,7 @@
             "dataType": "boolean",
             "readOnly": true,
             "enableSearch": true,
-            "enableEdit": false,
+            "enableEdit": true,
             "required": false
         },
         {
