--- a/profile/config.json
+++ b/profile/config.json
@@ -19,7 +19,8 @@
             "eventApiV2": "/api/event-api/v2",
             "servicingOrder": "",
             "DOPProjectManagementBase": "/dop/be-services/projectManagement",
-            "DOPProjectManagementProject": "/dop/be-services/projectManagement/project"
+            "DOPProjectManagementProject": "/dop/be-services/projectManagement/project",
+            "publisher": "/publisher/v1"
         }
     },
     "keycloak": {
