--- a/profile/config.json
+++ b/profile/config.json
@@ -8,6 +8,7 @@
         "eventApiUrl": "https://eventapi.dev.vubiquity.com",
         "servicingOrdersUrl": "https://servicing-order-manager.dev.vubiquity.com",
         "DOPUrl": "http://dops.dev.vubiquity.com:8040",
+        "publisher": "https://titlespublishermovida.dev.vubiquity.com",
         "service": {
             "avails": "/avails-api/v1",
             "availsParser": "/avails-parser/v1",
