PORT-3227 renaming column mappings, clearing warnings, cleaning propType issues

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -3,7 +3,7 @@
         "colId": "system",
         "javaVariableName": "system",
         "field": "system",
-        "displayName": "System",
+        "headerName": "System",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "displayName",
@@ -16,7 +16,7 @@
         "colId": "id",
         "javaVariableName": "id",
         "field": "id",
-        "displayName": "Title ID",
+        "headerName": "Title ID",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "id",
@@ -29,7 +29,7 @@
         "colId": "title",
         "javaVariableName": "title",
         "field": "title",
-        "displayName": "Title",
+        "headerName": "Title",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "title",
@@ -42,7 +42,7 @@
         "colId": "releaseYear",
         "javaVariableName": "releaseYear",
         "field": "releaseYear",
-        "displayName": "Release Year",
+        "headerName": "Release Year",
         "dataType": "year",
         "searchDataType": "year",
         "queryParamName": "releaseYear",
@@ -55,7 +55,7 @@
         "colId": "contentType",
         "javaVariableName": "contentType",
         "field": "contentType",
-        "displayName": "Content Type",
+        "headerName": "Content Type",
         "dataType": "string",
         "searchDataType": "readonly",
         "configEndpoint": "/content-types",
@@ -69,7 +69,7 @@
         "colId": "episodic.seriesTitleName",
         "javaVariableName": "episodic.seriesTitleName",
         "field": "episodic.seriesTitleName",
-        "displayName": "Series",
+        "headerName": "Series",
         "dataType": "string",
         "readOnly": true,
         "enableSearch": false,
@@ -80,7 +80,7 @@
         "colId": "episodic.seasonTitleName",
         "javaVariableName": "episodic.seasonTitleName",
         "field": "episodic.seasonTitleName",
-        "displayName": "Season",
+        "headerName": "Season",
         "dataType": "string",
         "readOnly": true,
         "enableSearch": false,
@@ -91,7 +91,7 @@
         "colId": "castCrew.director",
         "javaVariableName": "castCrew.director",
         "field": "castCrew.director",
-        "displayName": "Director",
+        "headerName": "Director",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "displayName",
@@ -104,7 +104,7 @@
         "colId": "ratings",
         "javaVariableName": "ratings",
         "field": "ratings",
-        "displayName": "Rating",
+        "headerName": "Rating",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "ratings",
@@ -117,7 +117,7 @@
         "colId": "externalIds.eidrLevel1",
         "javaVariableName": "externalIds.eidrLevel1",
         "field": "externalIds.eidrLevel1",
-        "displayName": "EIDR 1",
+        "headerName": "EIDR 1",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "displayName",
@@ -130,7 +130,7 @@
         "colId": "externalIds.eidrLevel2",
         "javaVariableName": "externalIds.eidrLevel2",
         "field": "externalIds.eidrLevel2",
-        "displayName": "EIDR 2",
+        "headerName": "EIDR 2",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "displayName",
@@ -143,7 +143,7 @@
         "colId": "castCrew.cast",
         "javaVariableName": "castCrew.cast",
         "field": "castCrew.cast",
-        "displayName": "Cast",
+        "headerName": "Cast",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "displayName",
