PORT-3257 remove filter on territory selected derived field

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -98,7 +98,7 @@
             "javaVariableName": "territory",
             "displayName": "Selected",
             "dataType": "territory.selected",
-            "searchDataType": "string",
+            "searchDataType": "territory.selected",
             "queryParamName": "selected",
             "readOnly": false,
             "enableSearch": true,
