PORT-3059 adjusting NexusField for new fetching logic

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -10,5 +10,37 @@
     {
         "field": "licensee",
         "configEndpoint": "/licensees"
+    },
+    {
+        "field": "licenseType",
+        "configEndpoint": "/licence-types"
+    },
+    {
+        "field": "contentType",
+        "configEndpoint": "/content-types"
+    },
+    {
+        "field": "allowedLanguages",
+        "configEndpoint": "/languages"
+    },
+    {
+        "field": "licenseRightsDescription",
+        "configEndpoint": "/license-rights-desc"
+    },
+    {
+        "field": "affiliate",
+        "configEndpoint": "/affiliates"
+    },
+    {
+        "field": "affiliateExclude",
+        "configEndpoint": "/affiliates"
+    },
+    {
+        "field": "territoryExcluded",
+        "configEndpoint": "/countries"
+    },
+    {
+        "field": "region",
+        "configEndpoint": "/regions"
     }
 ]
