--- a/profile/config.json
+++ b/profile/config.json
@@ -1,13 +1,11 @@
 {
     "gateway": {
-        "url": "https://availsapi.dev.vubiquity.com",
-        "availsParserUrl": "https://avails-parser.dev.vubiquity.com",
-        "titleUrl": "https://titlesapi.dev.vubiquity.com",
-        "configuration": "https://configapi.dev.vubiquity.com",
         "assetManagementURL": "https://asset-management-api.dev.vubiquity.com",
-        "eventApiUrl": "https://eventapi.dev.vubiquity.com",
-        "servicingOrdersUrl": "https://servicing-order-manager.dev.vubiquity.com",
+        "availsParserUrl": "https://avails-parser.dev.vubiquity.com",
+        "configuration": "https://configapi.dev.vubiquity.com",
         "DOPUrl": "http://dops.dev.vubiquity.com:8040",
+        "eventApiUrl": "https://eventapi.dev.vubiquity.com",
+        "mgmBaseUrl": "https://vuapi.dev.vubiquity.com/vubiquity/dete/rest",
         "publisher": "https://titlespublishermovida.dev.vubiquity.com",
         "service": {
             "avails": "/avails-api/v1",
@@ -16,13 +14,18 @@
             "titleV2": "/titles-api/v2",
             "configuration": "/configuration-api/v1",
             "assetManagement": "/api/asset-management/v1",
+            "mgmAsset": "dete-asset-metadata-service/assets",
+            "mgmTitle": "dete-asset-metadata-service/titles",
             "eventApi": "/api/event-api/v1",
             "eventApiV2": "/api/event-api/v2",
             "servicingOrder": "",
             "DOPProjectManagementBase": "/dop/be-services/projectManagement",
             "DOPProjectManagementProject": "/dop/be-services/projectManagement/project",
             "publisher": "/publisher/v1"
-        }
+        },
+        "servicingOrdersUrl": "https://servicing-order-manager.qa.vubiquity.com",
+        "titleUrl": "https://titlesapi.dev.vubiquity.com",
+        "url": "https://availsapi.dev.vubiquity.com"
     },
     "keycloak": {
         "clientId": "temportalapp-dev",
