--- a/profile/config.json
+++ b/profile/config.json
@@ -23,7 +23,7 @@
             "DOPProjectManagementProject": "/dop/be-services/projectManagement/project",
             "publisher": "/publisher/v1"
         },
-        "servicingOrdersUrl": "https://servicing-order-manager.qa.vubiquity.com",
+        "servicingOrdersUrl": "https://servicing-order-manager.dev.vubiquity.com",
         "titleUrl": "https://titlesapi.dev.vubiquity.com",
         "url": "https://availsapi.dev.vubiquity.com"
     },
