--- a/profile/configQA.json
+++ b/profile/configQA.json
@@ -8,6 +8,7 @@
         "eventApiUrl": "https://eventapi.qa.vubiquity.com",
         "servicingOrdersUrl": "https://servicing-order-manager.qa.vubiquity.com",
         "DOPUrl": "https://dop.qa.vubiquity.com:8045",
+        "mgmBaseUrl": "https://vuapi.qa.vubiquity.com/vubiquity/dete/rest",
         "service": {
             "avails": "/avails-api/v1",
             "availsParser": "/avails-parser/v1",
@@ -15,6 +16,8 @@
             "titleV2": "/titles-api/v2",
             "configuration": "/configuration-api/v1",
             "assetManagement": "/api/asset-management/v1",
+            "mgmAsset": "dete-asset-metadata-service/assets",
+            "mgmTitle": "dete-asset-metadata-service/titles",
             "eventApi": "/api/event-api/v1",
             "eventApiV2": "/api/event-api/v2",
             "servicingOrder": "",
