PORT-3061: Add territory fields

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -42,5 +42,9 @@
     {
         "field": "region",
         "configEndpoint": "/regions"
+    },
+    {
+        "field": "territory.country",
+        "configEndpoint": "/countries"
     }
 ]
