PORT-3275: resolving comments

--- a/profile/config.json
+++ b/profile/config.json
@@ -5,7 +5,7 @@
         "configuration": "https://configapi.dev.vubiquity.com",
         "DOPUrl": "http://dops.dev.vubiquity.com:8040",
         "eventApiUrl": "https://eventapi.dev.vubiquity.com",
-        "mgmBaseUrl": "https://vuapi.dev.vubiquity.com/vubiquity/dete/rest",
+        "deteBaseUrl": "https://vuapi.dev.vubiquity.com/vubiquity/dete/rest",
         "publisher": "https://titlespublishermovida.dev.vubiquity.com",
         "service": {
             "avails": "/avails-api/v1",
@@ -14,8 +14,8 @@
             "titleV2": "/titles-api/v2",
             "configuration": "/configuration-api/v1",
             "assetManagement": "/api/asset-management/v1",
-            "mgmAsset": "dete-asset-metadata-service/assets",
-            "mgmTitle": "dete-asset-metadata-service/titles",
+            "deteAsset": "dete-asset-metadata-service/assets",
+            "deteTitle": "dete-asset-metadata-service/titles",
             "eventApi": "/api/event-api/v1",
             "eventApiV2": "/api/event-api/v2",
             "servicingOrder": "",
