PORT-3061: Add fields

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -44,7 +44,7 @@
         "configEndpoint": "/regions"
     },
     {
-        "field": "territory.country",
+        "field": "country",
         "configEndpoint": "/countries"
     }
 ]
