--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "@atlaskit/dynamic-table": "^14.0.1",
         "@atlaskit/field-base": "^13.0.6",
         "@atlaskit/flag": "^12.3.2",
-        "@atlaskit/form": "^8.1.4",
+        "@atlaskit/form": "8.1.4",
         "@atlaskit/icon": "^19.0.1",
         "@atlaskit/inline-edit": "^10.0.23",
         "@atlaskit/lozenge": "^9.0.3",
