PORT-3127 adding pricing array fields

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -46,5 +46,13 @@
     {
         "field": "country",
         "configEndpoint": "/countries"
+    },
+    {
+        "field": "priceType",
+        "configEndpoint": "/price-types"
+    },
+    {
+        "field": "priceCurrency",
+        "configEndpoint": "/currencies"
     }
 ]
