--- a/profile/config.json
+++ b/profile/config.json
@@ -21,6 +21,7 @@
             "servicingOrder": "",
             "DOPProjectManagementBase": "/dop/be-services/projectManagement",
             "DOPProjectManagementProject": "/dop/be-services/projectManagement/project",
+            "DOPLoginWithKeycloak": "/AmdocsOSS/Portal/services/LoginWithKeycloak",
             "publisher": "/publisher/v1"
         },
         "servicingOrdersUrl": "https://servicing-order-manager.dev.vubiquity.com",
