--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -54,5 +54,37 @@
     {
         "field": "priceCurrency",
         "configEndpoint": "/currencies"
+    },
+    {
+        "field": "holdbackLanguage",
+        "configEndpoint": "/languages"
+    },
+    {
+        "field": "storeLanguage",
+        "configEndpoint": "/languages"
+    },
+    {
+        "field": "assetLanguage",
+        "configEndpoint": "/languages"
+    },
+    {
+        "field": "language",
+        "configEndpoint": "/languages"
+    },
+    {
+        "field": "audioType",
+        "configEndpoint": "/audio-types"
+    },
+    {
+        "field": "requiredFulfillmentLanguages",
+        "configEndpoint": "/languages"
+    },
+    {
+        "field": "audioDescription",
+        "configEndpoint": "/languages"
+    },
+    {
+        "field": "subtitles",
+        "configEndpoint": "/languages"
     }
 ]
