PORT-3131 adding fields in Other section

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -86,5 +86,17 @@
     {
         "field": "subtitles",
         "configEndpoint": "/languages"
+    },
+    {
+        "field": "productionStudio",
+        "configEndpoint": "/production-studios"
+    },
+    {
+        "field": "genres",
+        "configEndpoint": "/genres"
+    },
+    {
+        "field": "ngAudio",
+        "configEndpoint": "/ng-audios"
     }
 ]
