PORT-3288: remove event-management entry from importMap

--- a/profile/singleSpaApps.json
+++ b/profile/singleSpaApps.json
@@ -1,7 +1,6 @@
 {
     "imports": {
         "react": "https://cdn.jsdelivr.net/npm/react@16.13.1/umd/react.production.min.js",
-        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js",
-        "@portal-mf/event-management": "http://localhost:8080/portal-mf-event-management.js"
+        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js"
     }
 }
