PORT-3469 add download report option for preplan table

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -6,6 +6,7 @@
             "dataType": "string",
             "readOnly": true,
             "enableSearch": false,
+            "queryParamName": "id",
             "enableEdit": true,
             "required": false
         },
