PORT-3278: Display Dete Error with Tags

--- a/profile/servicesTableMappings.json
+++ b/profile/servicesTableMappings.json
@@ -61,11 +61,11 @@
     {
         "javaVariableName": "operationalStatus",
         "displayName": "Operational Status",
-        "dataType": "select",
+        "dataType": "string",
         "queryParamName": "operationalStatus",
         "readOnly": true,
         "enableSearch": true,
-        "enableEdit": true,
+        "enableEdit": false,
         "required": true
     }
 ]
