PORT-3239 fixing form buttons styling and adding coreTitle fields

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -98,5 +98,13 @@
     {
         "field": "ngAudio",
         "configEndpoint": "/ng-audios"
+    },
+    {
+        "field": "countryOfOrigin",
+        "configEndpoint": "/countries"
+    },
+    {
+        "field": "originalLanguage",
+        "configEndpoint": "/languages"
     }
 ]
