--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,10 +2,16 @@
     "name": "@vubiquity-nexus/portal-auth",
     "version": "1.0.0",
     "description": "Nexus Portal Common Auth",
-    "author": "Vubiquity", 
+    "author": "Vubiquity",
     "license": "UNLICENSED",
     "publishConfig": {
-      "registry": "http://nexus.vubiquity.com:8081/repository/npm-private/"
+        "registry": "http://nexus.vubiquity.com:8081/repository/npm-private/"
+    },
+    "peerDependencies": {
+        "jwt-decode": "2.x",
+        "keycloak-js": "9.x",
+        "lodash": "4.x",
+        "react-global-configuration": "1.x",
+        "reselect": "4.x"
     }
-  }
-  
+}
