--- a/profile/servicesTableMappings.json
+++ b/profile/servicesTableMappings.json
@@ -21,7 +21,7 @@
     },
     {
         "javaVariableName": "spec",
-        "displayName": "Spec",
+        "displayName": "Format Sheet",
         "dataType": "select",
         "queryParamName": "spec",
         "readOnly": false,
