PORT-3242 adding more fields to EditorialMetadata section

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -106,5 +106,9 @@
     {
         "field": "originalLanguage",
         "configEndpoint": "/languages"
+    },
+    {
+        "field": "locale",
+        "configEndpoint": "/countries"
     }
 ]
