PORT-3669: make recipient readonly and remove dropdown

--- a/profile/servicesTableMappings.json
+++ b/profile/servicesTableMappings.json
@@ -53,9 +53,9 @@
     {
         "javaVariableName": "recipient",
         "displayName": "Recipient",
-        "dataType": "select",
+        "dataType": "string",
         "queryParamName": "recipient",
-        "enableEdit": true,
+        "enableEdit": false,
         "required": true
     },
     {
